# transactions-service-sn

./: Dockerfile  Makefile  README.md  docker-compose.yaml  get-vault-creds.sh  pyproject.toml  vault-init.sh
api/: transactions-service.yaml
tests/: conftest.py  test_accounts_client.py  test_api.py  test_service.py
transactions/: __init__.py  main.py
transactions/api/: models.py  routes.py
transactions/clients/: accounts_client.py
transactions/services/: transaction.py
