[tool.poetry]
name = "transactions"
version = "1.0.1"
description = "Transactions Service API for Kong Bank"
authors = ["Kong Bank Engineering <engineering@kong-bank.example.com>"]
readme = "README.md"
packages = [{include = "transactions"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
pydantic = "^2.11.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "transactions.main:main"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
